# AppCifrado

./: README.md  cryptobro_vs_competitors.md  package-lock.json  package.json  replace_magic.py
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  toast.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scratch/: test_dsa.rs
src-tauri/src/: contacts.rs  crypto.rs  lib.rs  main.rs
src/components/: ContactsModal.tsx  GatekeeperModal.tsx  IdentityModal.tsx  QRCodeDisplay.tsx  QRImporter.tsx  ReAuthModal.tsx  SecurityGuideModal.tsx  Toaster.tsx
