[package]
name = "quantum-vault"
version = "0.1.0"
description = "Quantum-Resistant File Encryption App"
authors = ["Daniel Q. Parra"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quantum_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ml-kem = "0.2"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
window-vibrancy = "0.6"
flate2 = "1.0"
tar = "0.4"
walkdir = "2"
kem = "0.3.0-pre.0"
dilithium-rs = "0.2.0"

